WindGroup Dev/src/objects/Stock_Freeze__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <referenceTo>Stock__c</referenceTo>
        <relationshipLabel>Stock Freeze</relationshipLabel>
        <relationshipName>Stock_Freeze</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stock Freeze</label>
    <nameField>
        <displayFormat>SF-{YYYYMM}-{000000}</displayFormat>
        <label>Stock Freeze No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Freeze</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>